# Aico_emotion

./: .gitignore  AGENTS.md  GIT_SETUP.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  QUICK_START.md  README.md  README_RALPH.md  demo_vision.py  download_gesture_model.sh  download_mediapipe_models.sh  git-commit.sh  loop.sh  pyproject.toml  run_tests.sh  setup_project.sh
specs/: affect_state.md  hand_gesture.md  human_face.md
src/: __init__.py
src/affect/: __init__.py  personality.py  state.py
src/perception/: __init__.py  human_face.py  tuozhan
src/utils/: __init__.py  database.py
test_outputs/: README.md
test_outputs/reports/: debug_face_detection_20260115_174310.txt  inauguration_faces_20260115_174034.txt  inauguration_faces_20260115_174733.txt  landmarks_test_20260115_181913.txt  multi_faces_test_20260115_182835.txt  multi_faces_test_20260115_182917.txt  rps_batch_20260116_114229.txt  rps_sample_20260116_114106.txt  rps_visualize_20260116_114134.txt  test_report_20260114_165324.txt
