[project]
name = "aico-emotion"
version = "0.1.0"
description = "AICO 双轮足机器人情感系统"
requires-python = ">=3.10"
authors = [
    {name = "AICO Team"}
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "fer>=22.5.0",
    "SpeechRecognition>=3.10.0",
    "PyAudio>=0.2.13",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "pyserial>=3.5",
    "psutil>=5.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
